--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
     environment:
       - PORT=5000
       - NODE_ENV=production
-    # - DB_URI=mongodb://mongo:27017/linux_security  
+      - JWT_SECRET=${JWT_SECRET:-change-me-in-production}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+    # - DB_URI=mongodb://mongo:27017/linux_security
     depends_on:
       - mongo
 
